2010-08-27  smeghead <smeghead@users.sourceforge.jp>

	* translate code comment.

2010-08-25  smeghead <smeghead@users.sourceforge.jp>

	* fixed a bug that date label of burndown chart are all same date.
	use localtime_r function instead of localtime.

2010-08-23  smeghead <smeghead@users.sourceforge.jp>

	* fixed a bug that date label of burndown chart are all same date.

2010-08-21  smeghead <smeghead@users.sourceforge.jp>

	* 1.3.16 released.

2010-08-21  smeghead <smeghead@users.sourceforge.jp>

	* add SVN connect. when reply, if parameter was not suplied, register last
	posted value.
	* add SVN post-commit perl script.

2010-07-30  smeghead <smeghead@users.sourceforge.jp>

	* 1.3.15 released.

2010-07-30  smeghead <smeghead@users.sourceforge.jp>

	* prepare release.

2010-07-29  smeghead <smeghead@users.sourceforge.jp>

	* fixed generate hyper link bug. in multiple lines fields, make space(' ') end of hyper link character.
	* add LINK_DISABLED option. when LINK_DISABLED is not 0, not to generate hyper
	links.

2010-07-28  smeghead <smeghead@users.sourceforge.jp>

	* add rel=nofollow to auto generated hyper links.
	* only textarea field, generates hyper links. when display other elements,
	don't generates hyper links.
	* display remote address. against spamer.

2010-07-23  smeghead <smeghead@users.sourceforge.jp>

	* translated code comment.

2010-07-22  smeghead <smeghead@users.sourceforge.jp>

	* Bapt gave me the patch. use mkstemp instead of mktemp. Thank Bapt!

2010-06-30  smeghead <smeghead@users.sourceforge.jp>

	* Starbug1の公式サイトのドメインを取ったので、公式サイトのURLを変更した。

2010-06-17  smeghead <smeghead@users.sourceforge.jp>

	* 1.3.14リリース

2010-06-16  smeghead <smeghead@users.sourceforge.jp>

	* id:argius さんからパッチを取り込んだ。(http://d.hatena.ne.jp/argius/20100605/1275714723)ありがとうございます。
	* boolが定義されている場合は、再定義しないようにした。
	* 64bit環境で実行時にsqlite3_prepareでエラーが発生する問題があり、64bit環
	境でも、32bitでコンパイルしていたが、Starbug1側のバグが原因であることがわ
	かったので、修正した。update_elementsのプロトタイプ宣言と実装で引数が間違
	っていたのが、根本原因だった。