@@ -1,3 +1,7 @@
+2010-08-29  smeghead <smeghead@users.sourceforge.jp>
+
+	* add link-disabled css definition to top.css
+
 2010-08-27  smeghead <smeghead@users.sourceforge.jp>
 
 	* translate code comment.
